<resources>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_item">Add item</string>
    <string name="add_more">Add more</string>
    <string name="buy_pro">Buy Pro</string>
    <string name="buy_now">Buy now</string>
    <string name="buy_later">Buy later</string>
    <string name="cancel">Cancel</string>
    <string name="customize">Customize</string>
    <string name="customizations">Customizations</string>
    <string name="check_now">Check now</string>
    <string name="clear_done">Clear done</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_everything">Delete everything</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="edit_additional_item_details">Edit additional item details</string>
    <string name="editing_item_custom">Editing %s</string>
    <string name="email">Email</string>
    <string name="error">An error occurred</string>
    <string name="enter_text">Enter text</string>
    <string name="first_name">First name</string>
    <string name="input_text_by_voice">Input text by voice</string>
    <string name="install">Install</string>
    <string name="last_name">Last name</string>
    <string name="learn_more">Learn more</string>
    <string name="move">Move</string>
    <string name="move_item_to">Move item to</string>
    <string name="nickname">Nickname</string>
    <string name="no">No</string>
    <string name="not_interested">Not interested</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="please_wait">Please wait...</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_now">Purchase now</string>
    <string name="save">Save</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="select">Select</string>
    <string name="set">Set</string>
    <string name="settings">Settings</string>
    <string name="signup_later">Signup Later</string>
    <string name="sort">Sort</string>
    <string name="sort_items">Sort options</string>
    <string name="sync">Sync</string>
    <string name="themes">Themes</string>
    <string name="update">Update</string>
    <string name="upgrade">Upgrade</string>
    <string name="yes">Yes</string>
    <string name="send_list">Send list</string>
    <string name="description">Description</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="delete_shopping_list_items_confirmation">Are you sure you want to delete all items in your Shopping List?</string>
    <string name="quantity_abbr">Qty</string>
    <string name="shopping_list">Shopping List</string>
    <string name="total">Total</string>
    <string name="total_with_taxes">%s w/ tax</string>
    <string name="remaining">Remaining</string>
    <string name="unit_not_specified">None</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="unit_price">Unit price</string>
    <string name="tax_free">Tax-free</string>
    <string name="has_coupon">Coupon</string>
    <string name="coupon_amount">Coupon amount</string>
    <string name="coupon_note">Coupon notes</string>
    <string name="price_history_dialog_title">Price history</string>
    <string name="price_history_dialog_no_history">No price history available</string>
    <string name="coupon_type_amount">Amount</string>
    <string name="coupon_type_percentage">Percent</string>
    <string name="manage_history">Manage history</string>
    <string name="add_from_history">Add from history</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="cross_out_all_items">Cross out all item</string>
    <string name="uncross_out_all_items">Uncross all items</string>
    <string name="looking_up_product_please_wait">Looking up product. Please wait...</string>
    <string name="product_not_found">Sorry, could not find product. Enter it manually and Out of Milk will remember it.</string>
    <string name="barcode_scanner_prompt_title">Install Barcode Scanner</string>
    <string name="barcode_scanner_prompt_text">This functionality requires Barcode Scanner. Would you like to install it?</string>
    <string name="barcode_scanner_launch_error">Could not launch Barcode Scanner. Make sure it is installed correctly.</string>
    <string name="shopping_list_history">Product History</string>
    <string name="clear_history_prompt_title">Clear history</string>
    <string name="clear_history_prompt_text">Are you sure you want to clear your Product history?</string>
    <string name="clear_history_prompt_ok">Clear history</string>
    <string name="clear_history_prompt_cancel">Cancel</string>
    <string name="history_item_updated_on_subtext">Updated on %s</string>
    <string name="upc">UPC</string>
    <string name="clear_history">Clear history</string>
    <string name="delete_todo_list_items_confirmation">Are you sure you want to delete all items in your To-Do List?</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="reminder_dismiss">Dismiss</string>
    <string name="todo_list">To-Do List</string>
    <string name="todo_list_item_previously_deleted_error">This To-Do List item was previously deleted</string>
    <string name="reminder">Reminder</string>
    <string name="todo_lists">To-Do Lists</string>
    <string name="add_item_to_inventory">Add item to inventory</string>
    <string name="delete_pantry_list_items_confirmation">Are you sure you want to delete all items in your Pantry List?</string>
    <string name="none_specific_pantry_list">None Specific</string>
    <string name="pantry_list">Pantry List</string>
    <string name="pick_an_item">Pick an item</string>
    <string name="type_in">Type in...</string>
    <string name="type_of_pantry_list">Type of Pantry List</string>
    <string name="amount_gauge_hint_empty">None left</string>
    <string name="amount_gauge_hint_almost_empty">Almost empty</string>
    <string name="amount_gauge_hint_half">About half left</string>
    <string name="amount_gauge_hint_almost_full">Almost full</string>
    <string name="amount_gauge_hint_full">Full</string>
    <string name="amount_gauge">Amount</string>
    <string name="amount_gauge_empty">None</string>
    <string name="amount_gauge_half">Half</string>
    <string name="amount_gauge_full">Full</string>
    <string name="use_quantity_and_unit">Enter number instead</string>
    <string name="pantry_lists">Pantry Lists</string>
    <string name="spice_rack">Spice Rack</string>
    <string name="add_to_spice_inventory">Add to Spice Inventory</string>
    <string name="pick_a_spice">Pick a Spice</string>
    <string name="type_in_spice">Type in spice...</string>
    <string name="essentials">Essentials</string>
    <string name="out_of_milk_pro">Out of Milk Pro</string>
    <string name="out_of_milk_pro_features">"With Out of Milk Pro you get:
 • Access to the full-featured website
 • Manage your lists online
 • Sync &amp; backup
 • List sharing with others
 • Pick from different themes. Go to Settings › Customizations › Themes
 • Pick from different fonts. Go to Settings › Customizations › Fonts
 • Customize tap and long-press actions. Go to Settings › Customizations
 • Widgets
 • Coupon management
 • Priority e-mail support from our team"</string>
    <string name="out_of_milk_pro_pricing">Out of Milk Pro is only a one-time $4.99!</string>
    <string name="out_of_milk_pro_dialog_title">Out of Milk Pro</string>
    <string name="out_of_milk_pro_dialog_message">This feature requires an Out of Milk Pro account. If you already have an account, click Signin.</string>
    <string name="out_of_milk_pro_dialog_message_sharing">List sharing with others requires an Out of Milk Pro account. For sharing by Text or Email use the Menu › Send list option instead.</string>
    <string name="out_of_milk_pro_trial_expired_notif">Out of Milk Pro Trial Expiration</string>
    <string name="out_of_milk_pro_trial_expired_dialog_title">Trial Expiration</string>
    <string name="out_of_milk_pro_trial_expired_dialog_message">Your Out of Milk Pro trial has expired. You can upgrade now for only $4.99.</string>
    <string name="outofmilk_pro_reminder_title">Hi there!</string>
    <string name="outofmilk_pro_reminder_text">"You've been using this version of Out of Milk for about a week and we hope you are enjoying it. Did you know that Out of Milk has a Pro version that makes it better and unlocks exciting features such as sync, web access, list sharing, themes, customizations, and much more?"</string>
    <string name="add_new_list">Add new list</string>
    <string name="add_list">Add list</string>
    <string name="manage_shopping_lists">Manage Shopping Lists</string>
    <string name="manage_todo_lists">Manage To-Do Lists</string>
    <string name="manage_pantry_lists">Manage Pantry Lists</string>
    <string name="no_outstanding_items">No outstanding items</string>
    <string name="one_outstanding_item">1 outstanding item</string>
    <string name="two_or_more_outstanding_items">%s outstanding items</string>
    <string name="no_items">No items</string>
    <string name="one_item">1 item</string>
    <string name="two_or_more_items">%s items</string>
    <string name="shared_by">Shared by %s</string>
    <string name="add_friend_by_email">Add friend by email</string>
    <string name="add_friend_by_nickname">Add friend by nickname</string>
    <string name="enter_email_address">Enter an email address</string>
    <string name="enter_nickname">Enter a nickname</string>
    <string name="list_sharing_not_owner_message">"You cannot share this list because it is owned by '%s'."</string>
    <string name="share_via">Share via</string>
    <string name="share_list">Share list</string>
    <string name="ascending_order">Ascending</string>
    <string name="descending_order">Descending</string>
    <string name="list_sorting">List sorting</string>
    <string name="sort_by_done">"Move 'Done' items to the bottom"</string>
    <string name="sort_by_ordinal">"Manual sorting (Drag 'n' Drop)"</string>
    <string name="sort_by_description">Description</string>
    <string name="sort_by_created_date">Created date</string>
    <string name="sort_by_reminder_date">Reminder date</string>
    <string name="did_you_mean">Did you mean...</string>
    <string name="sync_notif_title">Out of Milk is synchronizing</string>
    <string name="sync_notif_text">Your Out of Milk lists are being synchronized</string>
    <string name="sync_preference">Sync Preference</string>
    <string name="sync_preference_select_text">Please set your sync preference:</string>
    <string name="sync_preference_auto">Automatically sync lists</string>
    <string name="sync_preference_manual">Let me sync lists manually</string>
    <string name="signin">Sign in</string>
    <string name="signin_different_account_warning_message">"You are about to sign in using a different account than the one previously used. All lists and items will be deleted. They can be retrieved later on by signing back under '%s'."</string>
    <string name="signin_signup_now_link"><u>Want to go Pro? Upgrade to Out of Milk Pro for only $4.99.</u></string>
    <string name="signin_please_wait">Signing in. Please wait...</string>
    <string name="signin_invalid_credentials">Invalid username or password</string>
    <string name="signin_reauthorize_title">Activate phone</string>
    <string name="signup">Sign up</string>
</resources>