<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical" android:id="@+id/content_panel" android:background="#fffafafa" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@+id/scroll_view" android:fadingEdge="none" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.0"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/description" style="?android:attr/textAppearanceSmall" />
                <EditText android:textColor="#ff000000" android:id="@+id/description" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textCapSentences" android:imeOptions="actionNext" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/quantity" style="?android:attr/textAppearanceSmall" />
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <Button android:id="@+id/number_add" android:text="+" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                    <EditText android:id="@+id/number_text" android:text="0" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                    <Button android:id="@+id/number_dec" android:text="-" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                    <Spinner android:layout_gravity="center_vertical" android:id="@+id/quantity_unit_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:imeOptions="actionNext" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/unit_price" style="?android:attr/textAppearanceSmall" />
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <EditText android:id="@+id/price" android:layout_width="wrap_content" android:layout_height="50.0dip" android:minWidth="80.0dip" android:text="0.00" android:singleLine="true" android:inputType="phone" android:imeOptions="actionDone" />
                    <ImageButton android:id="@+id/price_history" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip" android:src="@drawable/ic_btn_history" android:minHeight="48.0dip" />
                    <TextView android:textStyle="bold" android:textColor="#ff000000" android:id="@+id/total" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" style="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@+id/tax_free" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textColor="#ff000000" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tax_free" style="?android:attr/textAppearanceMediumInverse" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/has_coupon_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@+id/has_coupon" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textColor="#ff000000" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/has_coupon" style="?android:attr/textAppearanceMediumInverse" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/coupon_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/coupon_amount" style="?android:attr/textAppearanceSmall" />
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <EditText android:id="@+id/coupon_amount" android:layout_width="wrap_content" android:layout_height="50.0dip" android:minWidth="80.0dip" android:text="0.00" android:singleLine="true" android:inputType="phone" android:imeOptions="actionDone" />
                        <Spinner android:layout_gravity="center_vertical" android:id="@+id/coupon_type_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:imeOptions="actionNext" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/coupon_note" style="?android:attr/textAppearanceSmall" />
                    <EditText android:textColor="#ff000000" android:gravity="top" android:id="@+id/coupon_note" android:layout_width="match_parent" android:layout_height="wrap_content" android:minLines="3" android:capitalize="sentences" android:imeOptions="actionNext" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/notes" style="?android:attr/textAppearanceSmall" />
                <EditText android:textColor="#ff000000" android:gravity="top" android:id="@+id/note" android:layout_width="match_parent" android:layout_height="wrap_content" android:minLines="3" android:capitalize="sentences" android:imeOptions="actionDone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="4.0dip" android:paddingTop="5.0dip" android:paddingRight="4.0dip" android:paddingBottom="1.0dip" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/save" android:layout_width="0.0dip" android:layout_height="match_parent" android:text="@string/save" android:layout_weight="1.0" />
        <Button android:id="@+id/cancel" android:layout_width="0.0dip" android:layout_height="match_parent" android:text="@string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
